# sampling

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: constants.py
src/gfs/: constants.py
src/gfs/app/: bayes.py  client.py  domain.py  io.py  project.py
src/gfs/configuration/: mock_config.yaml
src/gfs/data/biased_coin/: biased-coin_bias-36-64_trials-150.csv  biased-coin_dummy_input.csv
src/gfs/models/: binomial.py  model.py
src/gfs/projects/: biased_coin.toml
src/gfs/projects/biased_coin/configuration/: biased_coin.yaml
src/gfs/sample/: algebra.py  bayes.py  client.py  distributions.py  domain.py  elements.py  functions.py  histogram.py  infer.py  io.py  leaf.py  project.py  tree.py  utils.py
src/sample/: client.py  infer.py
