[build-system]
requires = ["setuptools>=65.5.0"]

[project]
name = "gfs"
version = "0.0.1"
authors = [{ name = "Daniel Fusca", email = "daniel.fusca@gmail.com" }]
maintainers = [{ name = "Daniel Fusca", email = "daniel.fusca@gmail.com" }]
description = "Tool to perform Bayesian inference using a technique that does not require computing the gradient."
readme = { file = "README.md" }
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["Bayesian inference", "gradient-free"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "click==8.1.3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pre-commit",
    "pytest>=7.2.1",
    "ipython>=8.9.0",
    "ipdb>=0.13.11",
]

[project.urls]
"Homepage" = "https://github.com/fuscadan/sampling"

[project.scripts]
gfs = "gfs.sample.client:cli"
